# MDL

./: CMakeLists.txt  README.md  cpl.bat  mdl.txt  notes.txt  qcpl.bat
src/: file.cpp  file.hpp  mdl.cpp  mdl.hpp  mdl_file.cpp  mdl_file.hpp  xml_file.cpp  xml_file.hpp
test/: cpltest.bat  readme_test.md  test.cpp  test.mdl
